src/objects/WaiveRefinanceNRCOption__mdt.object
<CustomObject>
    <fields>
        <fullName>IsDefault__c</fullName>
        <label>IsDefault</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LanguageCode__c</fullName>
        <label>LanguageCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>waiveRefinanceNRC__c</fullName>
        <label>waiveRefinanceNRC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Waive Refinance NRC Option</label>
    <pluralLabel>Waive Refinance NRC Options</pluralLabel>
</CustomObject>